# cognion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.claude/: config.json
.claude/commands/: checkpoint.md  docs-audit.md  resume.md
.claude/hooks/: check-session-start.sh  save-session.sh
.claude/skills/implement-us/: README.md  artifacts.md  config.json  conventions.md  skill.md
.claude/skills/run-cognion/: SKILL.md  smoke.sh
.claude/templates/: README.md
.claude/templates/testing/: test-unit.py
.claude/tracking/: README.md  US-1.1.0-tracking.json  US-1.1.1-tracking.json  US-1.1.2-tracking.json  US-1.1.3-tracking.json  US-1.1.4-tracking.json  US-1.1.5-tracking.json  __init__.py  commands.py  reports.py  time_tracker.py  track.py  tracker_cli.py
.cm/baselines/: BL-000-fundacion-documental.md  BL-001-fundacion-tecnica.md
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: us-iedd.md
.github/workflows/: cd.yml  ci.yml
docs/adr/: ADR-001-monolito-modular-clean-architecture.md  ADR-002-event-sourcing-cqrs-sesiones.md  ADR-003-fastapi-vs-django-channels.md  ADR-004-postgresql-vs-sqlite.md  ADR-005-websockets-sesiones-en-vivo.md  ADR-006-integracion-directa-sesiones-notificaciones.md  ADR-007-jwt-rbac-autenticacion.md  ADR-008-github-actions-ci-cd.md  ADR-009-unit-of-work-transaccionalidad.md  ADR-010-healthcheck-disponibilidad.md  ADR-011-estandares-interfaz-shadcn-wcag.md  ADR-012-politica-invitacion-link.md  ADR-013-expiracion-jwt-sin-refresh.md  ADR-014-bcrypt-hashing-contrasenas.md  ADR-015-renombrar-bc-sesiones-actividad-evaluativa.md  ADR-016-bootstrap-primer-administrador.md  ADR-017-db-session-compartida.md  ADR-018-nullpool-engine-sqlalchemy.md  ADR-TEMPLATE.md
docs/aprendizajes/: HITO-1-FUNDACION-TECNICA-VS-PRIMER-BC-DOMINIO.md  HITO-2-SKILL-DOCS-AUDIT-DESDE-EXPERIENCIA-OPERATIVA.md  HITO-3-CLAUDE-MD-PIDIO-CANDIDATAS-INEXISTENTES-PARA-INC0.md  HITO-template.md
docs/architecture/: 01-system-context.md  02-container-view.md  03-bounded-contexts.md  20-context-map-integrations.md  README.md
docs/cm/: CHECKLIST-INSTALACION.md  PLAN-CM.md  PROCEDIMIENTO-UAT.md  WORKFLOW-DESARROLLO.md
docs/design/domain/: BC-identidad-modelo.md
docs/design/ux/: wireframes-identidad.md
docs/iedd/: 01-Ingenieria_Especificaciones_DDD_IA.md  02-Marco_Conceptual_5_Capas.md  03-Diagrama_Conceptual.md  04-Hipotesis_Ensayo_IA_Ingenieria_Human_In_The_Loop.md  05-Fases-y-Gates.md  US-IEDD-template.md
docs/inventario/: DOCUMENTATION-MAP.md  FUENTES-DE-VERDAD-DOCUMENTAL.md
docs/plans/: CHECKLIST-INSTALACION.md  PLAN-CM.md  PROCEDIMIENTO-UAT.md  US-1.1.4-context.md  US-1.1.4-plan.md  WORKFLOW-DESARROLLO.md
docs/plans/inc1/: US-1.1.0-context.md  US-1.1.0-plan.md  US-1.1.1-context.md  US-1.1.1-plan.md  US-1.1.2-context.md  US-1.1.2-plan.md  US-1.1.3-context.md  US-1.1.3-plan.md  US-1.1.4-context.md  US-1.1.4-plan.md  US-1.1.5-context.md  US-1.1.5-plan.md  inc1-candidatas.md
docs/reports/inc1/: US-1.1.0-report.md  US-1.1.1-report.md  US-1.1.2-report.md  US-1.1.3-report.md  US-1.1.4-report.md  US-1.1.5-report.md
docs/requirements/: vision.md
docs/rf/: ARQ_v1.md  PLAN_v1.md  RF_v1.md  RNF_v1.md  escenarios-calidad-draft.md  sesion-rnf.md
docs/specs/inc1/: US-1.1.0.md  US-1.1.1.md  US-1.1.2.md  US-1.1.3.md  US-1.1.4.md  US-1.1.5.md
docs/traceability/: matrix.md
frontend/: package-lock.json  package.json  vite.config.ts
migrations/: env.py
migrations/versions/: 0a0e4595d5cc_identidad_usuarios_y_comisiones.py  479b36fd0759_invitacion.py  696c5efea732_fundacion_tecnica_primera_migracion_.py  dd44a181d7fc_estudiante_comision_id.py
quality/reports/architectanalyst/: BL-001-arquitectura.json
quality/reports/inc1/: US-1.1.0-codeguard.json  US-1.1.0-coverage.json  US-1.1.0-quality.json  US-1.1.1-coverage.json  US-1.1.1-pylint.json  US-1.1.1-quality.json  US-1.1.2-cc.json  US-1.1.2-coverage.json  US-1.1.2-mi.json  US-1.1.2-pylint.json  (+6 more)
scripts/: seed_admin.py
src/: app.py  settings.py
src/analytics/: README.md
src/banco_preguntas/: README.md
src/identidad/: README.md
src/notificaciones/: README.md
src/sesiones/: README.md
src/shared/: README.md
tests/: README.md
tests/integration/: conftest.py
(+101 files in other folders)
