[project]
name = "cognion"
version = "0.1.0"
description = "Plataforma de cuestionarios para facultades de ingeniería"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "PyJWT[crypto]>=2.8.0",
    "bcrypt>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "quality-agents",
]

[tool.uv.sources]
quality-agents = { git = "https://github.com/vvalotto/software_limpio" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Formatters / Linters
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "D"]
# E501: line-length ya cubierto por black/max-line-length.
# N818: excepciones de dominio nombradas en lenguaje de negocio (EmailYaRegistrado,
# UsuarioNoEsDocente) tal como las especifica docs/specs/ — no se les agrega sufijo "Error".
ignore = ["E501", "N818"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
# __init__.py vacíos de los BC aún no implementados: no se agregan docstrings artificiales.
"**/__init__.py" = ["D104", "D100"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "happy-path: escenario BDD de flujo exitoso",
    "error: escenario BDD de rechazo/error",
    "US-1.1.0: escenarios BDD de la US-1.1.0",
    "US-1.1.1: escenarios BDD de la US-1.1.1",
    "alta-usuario: escenario BDD de alta de Usuario",
    "alta-comision: escenario BDD de alta de Comisión",
    "asignacion-docente: escenario BDD de asignación de Docente a Comisión",
    "generar-invitacion: escenario BDD de generación de invitación",
    "registro-estudiante: escenario BDD de registro de Estudiante vía invitación",
    "US-1.1.2: escenarios BDD de la US-1.1.2",
    "US-1.1.3: escenarios BDD de la US-1.1.3",
    "ux: escenario BDD de UI — pendiente hasta que exista infraestructura de frontend (routing/cliente API)",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/*/frameworks/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

# ---------------------------------------------------------------------------
# Quality agents (software_limpio)
# Umbrales calibrados para Clean Architecture — no usar defaults del sistema
# (CBO=5/WMC=20 genéricos producen falsos positivos en Use Cases que orquestan
# múltiples Entities). Recalibrar al inicio de cada Incremento si el aggregate
# principal crece significativamente.
# ---------------------------------------------------------------------------

[tool.codeguard]
min_pylint_score = 8.0
check_complexity = true
max_cyclomatic_complexity = 10

[tool.designreviewer]
max_cbo = 10
max_wmc = 25
max_god_object_lines = 300
max_god_object_methods = 15
paths = ["src"]

[tool.architectanalyst]
paths = ["src"]
history_db = "quality/reports/architectanalyst/history.db"

[tool.architectanalyst.layers]
entities = ["src/*/entities"]
use_cases = ["src/*/use_cases"]
interface_adapters = ["src/*/interface_adapters"]
frameworks = ["src/*/frameworks"]
